// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input renders Disabled Input correctly 1`] = `
<div>
  <input
    class="ui-input disabled radius"
    disabled=""
    type="text"
    value="禁用"
  />
</div>
`;

exports[`Input renders Input with radius correctly 1`] = `
<div>
  <input
    class="ui-input radius"
    placeholder="请输入"
    type="text"
  />
</div>
`;

exports[`Input renders correctly with initial value 1`] = `
<div>
  <Input
    onChange={[Function]}
    prefixCls="ui-input"
    radius={true}
    size={null}
    type="text"
    value="hey"
  />
</div>
`;

exports[`Input renders different sizes of Input correctly 1`] = `
<div>
  <input
    class="ui-input radius size-xl"
    placeholder="请输入"
    type="text"
  />
  <input
    class="ui-input radius size-lg"
    placeholder="请输入"
    type="text"
  />
  <input
    class="ui-input radius size-sm"
    placeholder="请输入"
    type="text"
  />
  <input
    class="ui-input radius size-xs"
    placeholder="请输入"
    type="text"
  />
</div>
`;

exports[`Input renders different types of Input correctly 1`] = `
<div>
  <input
    class="ui-input radius"
    placeholder="请输入"
    type="text"
  />
  <textarea
    class="ui-input radius"
    placeholder="请输入"
  />
</div>
`;
